[package]
name = "corium"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/pichi-vm/corium"
publish = false
description = "The pichi guest agent: mounts the root carapace in the initramfs and pivots."

# corium runs as the initramfs `/init` (PID 1) and is validated by real boots
# (the vm-tests boot suite), so its `fn main` has no unit-test harness.
[[bin]]
name = "corium"
path = "src/main.rs"
test = false

[lib]
# Tiny library half: the cmdline-parse helper (unit-tested) + the console
# sentinels host-side boot tests match on.

# corium is the Linux guest `/init` — its whole library is
# `#![cfg(target_os = "linux")]`. Gate the syscall/carapace deps to Linux too,
# so cross-platform consumers (the `pichi` CLI's vm-tests build on Windows /
# macOS) don't compile the Linux dm + ioctl stack (carapace → carapace-dm →
# iocuddle) they never use.
[target.'cfg(target_os = "linux")'.dependencies]
# Read-side carapace assembly: attach the root carapace from its trusted root.
carapace = { git = "https://github.com/pichi-vm/carapace" }
# rustix's safe syscall wrappers (linux_raw backend → no libc, no unsafe in
# our code). Feature set is the union of the monorepo workspace base
# (std, fs, process) and corium's own (mount, system, process, stdio).
rustix = { version = "1", default-features = false, features = ["std", "fs", "process", "mount", "system", "stdio"] }

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
type_complexity = "allow"
similar_names = "allow"
struct_field_names = "allow"
needless_continue = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"
